--- a/src/bz-browse-widget.ui
+++ b/src/bz-browse-widget.ui
@@ -2,7 +2,7 @@
 <interface>
   <requires lib="gtk" version="4.0"/>
   <requires lib="Adw" version="1.0"/>
-  <template class="GaBrowseWidget" parent="AdwBin">
+  <template class="BzBrowseWidget" parent="AdwBin">
     <property name="child">
       <object class="GtkScrolledWindow">
         <property name="hscrollbar-policy">never</property>
@@ -16,7 +16,7 @@
             <property name="model">
               <object class="GtkNoSelection">
                 <binding name="model">
-                  <lookup name="model">GaBrowseWidget</lookup>
+                  <lookup name="model">BzBrowseWidget</lookup>
                 </binding>
               </object>
             </property>
@@ -44,7 +44,7 @@
               <object class="GtkImage">
                 <property name="icon-size">large</property>
                 <binding name="paintable">
-                  <lookup name="icon-paintable" type="GaEntry">
+                  <lookup name="icon-paintable" type="BzEntry">
                     <lookup name="item">GtkListItem</lookup>
                   </lookup>
                 </binding>
@@ -64,7 +64,7 @@
                     <property name="width-chars">20</property>
                     <property name="max-width-chars">20</property>
                     <binding name="label">
-                      <lookup name="title" type="GaEntry">
+                      <lookup name="title" type="BzEntry">
                         <lookup name="item">GtkListItem</lookup>
                       </lookup>
                     </binding>
@@ -80,7 +80,7 @@
                     <property name="width-chars">20</property>
                     <property name="max-width-chars">20</property>
                     <binding name="label">
-                      <lookup name="description" type="GaEntry">
+                      <lookup name="description" type="BzEntry">
                         <lookup name="item">GtkListItem</lookup>
                       </lookup>
                     </binding>
