--- a/src/bz-update-page.ui
+++ b/src/bz-update-page.ui
@@ -2,7 +2,7 @@
 <interface>
   <requires lib="gtk" version="4.0"/>
   <requires lib="Adw" version="1.0"/>
-  <template class="GaUpdatePage" parent="AdwBin">
+  <template class="BzUpdatePage" parent="AdwBin">
     <property name="child">
       <object class="AdwToolbarView">
         <child type="top">
@@ -69,7 +69,7 @@
           <object class="GtkImage">
             <property name="icon-size">large</property>
             <binding name="paintable">
-              <lookup name="icon-paintable" type="GaEntry">
+              <lookup name="icon-paintable" type="BzEntry">
                 <lookup name="item">GtkListItem</lookup>
               </lookup>
             </binding>
@@ -81,7 +81,7 @@
             <property name="ellipsize">end</property>
             <property name="single-line-mode">true</property>
             <binding name="label">
-              <lookup name="title" type="GaEntry">
+              <lookup name="title" type="BzEntry">
                 <lookup name="item">GtkListItem</lookup>
               </lookup>
             </binding>
@@ -97,7 +97,7 @@
             <property name="ellipsize">end</property>
             <property name="single-line-mode">true</property>
             <binding name="label">
-              <lookup name="description" type="GaEntry">
+              <lookup name="description" type="BzEntry">
                 <lookup name="item">GtkListItem</lookup>
               </lookup>
             </binding>
