--- a/src/bz-search-widget.ui
+++ b/src/bz-search-widget.ui
@@ -504,7 +504,6 @@
                                       <class name="dimmed"/>
                                     </style>
                                     <property name="margin-top">5</property>
-                                    <property name="margin-bottom">5</property>
                                     <property name="label">Click on an image to open the screenshots externally.</property>
                                     <binding name="visible">
                                       <closure function="invert_boolean" type="gboolean">
@@ -520,6 +519,16 @@
                                     <property name="visible">FALSE</property>
                                   </object>
                                 </child>
+                              </object>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="open_screenshot_error">
+                                <style>
+                                  <class name="error"/>
+                                </style>
+                                <property name="margin-top">5</property>
+                                <property name="visible">FALSE</property>
+                                <property name="selectable">TRUE</property>
                               </object>
                             </child>
                             <child>
