--- a/src/bz-search-widget.ui
+++ b/src/bz-search-widget.ui
@@ -500,11 +500,35 @@
                                       <object class="GtkButton" id="download_button">
                                         <style>
                                           <class name="suggested-action"/>
+                                          <class name="circular"/>
                                         </style>
                                         <property name="vexpand">FALSE</property>
+                                        <property name="hexpand">FALSE</property>
                                         <property name="has-tooltip">TRUE</property>
                                         <property name="tooltip-text">Download and install this application</property>
-                                        <property name="icon-name">folder-download-symbolic</property>
+                                        <property name="child">
+                                          <object class="GtkBox">
+                                            <property name="margin-start">13</property>
+                                            <property name="margin-end">13</property>
+                                            <property name="margin-top">3</property>
+                                            <property name="margin-bottom">3</property>
+                                            <property name="orientation">horizontal</property>
+                                            <property name="spacing">5</property>
+                                            <child>
+                                              <object class="GtkImage">
+                                                <property name="icon-name">folder-download-symbolic</property>
+                                              </object>
+                                            </child>
+                                            <child>
+                                              <object class="GtkLabel">
+                                                <style>
+                                                  <class name="caption-heading"/>
+                                                </style>
+                                                <property name="label">Install</property>
+                                              </object>
+                                            </child>
+                                          </object>
+                                        </property>
                                       </object>
                                     </child>
                                     <child>
