--- a/src/bz-search-widget.ui
+++ b/src/bz-search-widget.ui
@@ -66,24 +66,6 @@
     <property name="child">
       <object class="AdwBottomSheet" id="sheet">
         <property name="reveal-bottom-bar">FALSE</property>
-        <property name="bottom-bar">
-          <object class="GtkCenterBox">
-            <property name="orientation">horizontal</property>
-            <property name="vexpand">TRUE</property>
-            <property name="center-widget">
-              <object class="GtkLabel">
-                <style>
-                  <class name="title-3"/>
-                </style>
-                <property name="margin-top">20</property>
-                <property name="margin-bottom">20</property>
-                <property name="vexpand">TRUE</property>
-                <property name="ellipsize">end</property>
-                <property name="label">Swipe up for details</property>
-              </object>
-            </property>
-          </object>
-        </property>
         <property name="content">
           <object class="GtkBox">
             <style>
@@ -151,7 +133,7 @@
               </object>
             </child>
             <child>
-              <object class="AdwBreakpointBin">
+              <object class="AdwBreakpointBin" id="breakpoint_bin">
                 <property name="width-request">300</property>
                 <property name="height-request">300</property>
                 <property name="child">
@@ -785,7 +767,6 @@
                 <child>
                   <object class="AdwBreakpoint" id="breakpoint">
                     <condition>max-width: 900px</condition>
-                    <setter object="sheet" property="reveal-bottom-bar">TRUE</setter>
                     
                     <setter object="entry_view" property="vexpand">TRUE</setter>
                     <setter object="entry_view" property="hexpand">TRUE</setter>
@@ -809,7 +790,7 @@
                     <setter object="size_label" property="width-chars">13</setter>
                     <setter object="size_label" property="max-width-chars">13</setter>
                     
-                    <setter object="screenshot_scroll" property="height-request">150</setter>
+                    <setter object="screenshot_scroll" property="height-request">300</setter>
                     <setter object="screenshot_scroll" property="propagate-natural-height">TRUE</setter>
                     <setter object="screenshot_scroll" property="vexpand">TRUE</setter>
 
